--- a/Frondendmonitoring/Components/_Imports.razor
+++ b/Frondendmonitoring/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Frondendmonitoring
 @using Frondendmonitoring.Components
+@using MudBlazor
+@using MudBlazor.Services
