--- a/Frondendmonitoring/Components/App.razor
+++ b/Frondendmonitoring/Components/App.razor
@@ -7,8 +7,8 @@
     <base href="/"/>
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
     <link rel="stylesheet" href="@Assets["app.css"]"/>
-    <link rel="stylesheet" href="@Assets["Frondendmonitoring.styles.css"]"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" /
+    <link rel="stylesheet" href="@Assets["FrontendMonitoring.styles.css"]"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href=@Assets["_content/MudBlazor/MudBlazor.min.css"] rel="stylesheet" />
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
