--- a/Frondendmonitoring/Components/_Imports.razor
+++ b/Frondendmonitoring/Components/_Imports.razor
@@ -6,7 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Frondendmonitoring
-@using Frondendmonitoring.Components
+@using FrontendMonitoring
+@using FrontendMonitoring.Components
 @using MudBlazor
 @using MudBlazor.Services
