--- a/FrontendMonitoring/Components/Layout/MainLayout.razor
+++ b/FrontendMonitoring/Components/Layout/MainLayout.razor
@@ -16,6 +16,7 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent Class="pt-16 pa-4">
+        <LeafletScripts />
         @Body
     </MudMainContent>
 </MudLayout>
