--- a/FrontendMonitoring/Components/Routes.razor
+++ b/FrontendMonitoring/Components/Routes.razor
@@ -1,6 +1,11 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)"/>
-        <FocusOnNavigate RouteData="routeData" Selector="h1"/>
-    </Found>
+﻿<Router AppAssembly="@typeof(Program).Assembly">
+	<Found Context="routeData">
+		<RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
+		<FocusOnNavigate RouteData="@routeData" Selector="h1" />
+	</Found>
+	<NotFound>
+		<LayoutView Layout="@typeof(Layout.MainLayout)">
+			<p>404 - Deze pagina bestaat niet bro 💀</p>
+		</LayoutView>
+	</NotFound>
 </Router>
