Loginscreen functionality added, changed login from nav to home.

--- a/FrontendMonitoring/Components/Layout/NavMenu.razor
+++ b/FrontendMonitoring/Components/Layout/NavMenu.razor
@@ -4,5 +4,5 @@
     <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Dashboard</MudNavLink>
 
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
-    <MudNavLink Href="login" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Login">Login</MudNavLink>
+    @*<MudNavLink Href="login" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Login">Login</MudNavLink>*@
 </MudNavMenu>
