added animations and authentication

--- a/FrontendMonitoring/Components/Layout/MainLayout.razor
+++ b/FrontendMonitoring/Components/Layout/MainLayout.razor
@@ -17,7 +17,9 @@
     </MudDrawer>
     <MudMainContent Class="pt-16 pa-4">
         <LeafletScripts />
-        @Body
+        <div class="page fade-in">
+            @Body
+        </div>
     </MudMainContent>
 </MudLayout>
 
